--- a/requirements.txt
+++ b/requirements.txt
@@ -15,5 +15,8 @@ regex>=2023.0.0
 tqdm>=4.65.0
 scikit-learn>=1.2.0
 
+# LLM API
+groq>=0.4.0
+
 # Note: After installing requirements, download SpaCy model:
 # python -m spacy download en_core_web_sm
